2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    Remove obsolete notify callbacks
	    check pspec.name in notify_needle_cb, not pspec 
	    

2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* plugins/live_data/live_data.py:
	    remove some unused functions


2008-05-02  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    don't try to determine the data type in port_io_watch_cb,
	    only: SEARCHING, NO DATA, ?, etc
	    

2008-04-29  Ben Van Mechelen  <me@benvm.be>

	* garmon/prefs.py:
	    don't raise an exception when a plugin tries to resgister
	    a preference that already exists.
	     

2008-04-29  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    call _obd_connected_cb in __init__
	

2008-04-29  Ben Van Mechelen  <me@benvm.be>

	* configure.ac:
	    define major, minor and micro version
	    expand GARMON_VERSION
	* garmon/__init__.py:
	* garmon/defs.py.in:
	* garmon/garmon_app.py:
	    set version from expanded variable in about dialog	    
	

2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    prevent the gauges from pointing beyond their range


2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Lots and lots of changes to make OBDDevice actually work :)
        
        
2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    close method always emits the connected signal


2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Reworked OBDDevice: We are now using add_io_watch.
	    We send a command to the device and just wait for the 
	    io signal. Depending on success or error we call a supplied